bug5 - resolvido com aplicação de margin:auto e text-align: center.

--- a/semana2/aula1/bugfixes/index.css
+++ b/semana2/aula1/bugfixes/index.css
@@ -110,6 +110,8 @@ div:last-child {
 
 table {
     width: 60%;
+    text-align: center;
+    margin: auto;
 }
 
 td button {
